<resources>
    <string name="app_name">Somuli</string>
    <string name="hello">Hello</string>
    <!--    <string name="welcome">Find fresh vegetables what you want here</string>-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Welcome Screen   -->
    <string name="welcome_to">Welcome to\nSomuli</string>
    <string name="ingredients_for_cooking">Ingredients For Cooking?</string>
    <string name="fruit">Fruit?</string>
    <string name="vegetable">Vegetable?</string>
    <string name="shopping_all_you_need_here">Shopping all you need here!</string>


    <!--    Sign Up   -->
    <string name="welcome_user">Welcome \nUser</string>
    <string name="sign_up_to_join">Sign up to join</string>
    <string name="username">Username</string>
    <string name="hint_username">Username</string>
    <string name="email">Email</string>
    <string name="hint_email">Somuli@gmail.com</string>
    <string name="password">Enter your password</string>
    <string name="hint_password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_up_button">Sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>


    <!--    Sign In   -->
    <string name="welcome_back">Welcome \nBack</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_button">Sign In</string>
    <string name="forgot_password">Forgot password?</string>


    <!--    Forget Password   -->
    <string name="forgot_pass">Forgot Password</string>
    <string name="enter_phone_number">Enter your phone number</string>
    <string name="enter_phone_number_instruction">Enter your phone number and we will send you\ninstruction on how to reset it</string>
    <string name="enter_otp">Enter your OTP code</string>
    <string name="enter_otp_instruction">A 4 digit code has been sent\nto +62********96</string>
    <string name="send">Send</string>
    <string name="verify">Verify</string>
    <string name="new_pass">New password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="verification_code">Verification code</string>
    <string name="pass_changed">Your password has been changed</string>
    <string name="pass_changed_instruction">Please sign in use your username</string>

    <!--    Custom dialog signup-->
    <string name="success">Success</string>
    <string name="signup_success">Congratulation! You have successfully create an account</string>
    <string name="loading">Loading...</string>

    <!--    Button-->
    <string name="ok">Ok</string>
    <string name="search">Search</string>

    <!--    Home-->
    <string name="only_serve">Only serve delivery in Medan</string>
    <string name="hello_egroce">Hello\Somuli</string>
    <string name="find_fresh">Find fresh vegetables what you want</string>
    <string name="categories">Categories</string>
    <string name="see_all">See all</string>
    <string name="popular_product">Popular Products</string>


    <!--    Product Recycler VIew-->
    <string name="product_image">Product Image</string>
    <string name="product_title">Title</string>
    <string name="product_weight">Weight</string>
    <string name="product_price">Price</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
        dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
        amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
        invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
        justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
        dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
        et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
        dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
        invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
        duo dolores et ea
    </string>
    <string name="price_offer">Price Offer</string>
    <string name="cancel">cancel</string>
    <string name="waiting_for_confirmation_negotiation_remaining_0_times">Negotiation remaining 0 times</string>
    <string name="negotiation_success">Negotiation success</string>
    <string name="you_are_given_3_chance_to_negotiate">You have 3 chances to negotiate</string>
    <string name="product_detail">Product Detail</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="share">Share</string>
    <string name="need_help">Need Help?</string>
    <string name="report">Report</string>
    <string name="now">Now</string>
    <string name="schedule">Schedule</string>


    <!--    Product's Weight-->
    <string-array name="weight">
        <item>100gr</item>
        <item>250gr</item>
        <item>500gr</item>
        <item>1kg</item>
    </string-array>

    <!--    Product's Weight-->
    <string-array name="payment">
        <item>OVO</item>
        <item>Gopay</item>
        <item>Transfer Bank</item>
    </string-array>

    <!--    Language-->
    <string-array name="Language">
        <item>English</item>
        <item>Indonesian</item>
        <item>Japanese</item>
        <item>Chinese</item>
        <item>German</item>
    </string-array>
</resources>