<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_page"
    tools:context=".SignupActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:id="@+id/tvWelcomeUser2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_user"
            android:textColor="@color/black"
            android:textSize="@dimen/title_text_size"
            android:layout_weight="2"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/ivUser2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sign_up_user"
            android:layout_weight="1"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_to_join"
        android:textSize="@dimen/normal_text_size"
        android:layout_marginBottom="@dimen/margin_title_desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_page">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_username2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <EditText
                android:id="@+id/etUsername2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_item_large"
                android:hint="@string/username"
                android:lines="1"
                android:inputType="textPersonName"
                android:drawableEnd="@drawable/ic_account"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_email2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <EditText
                android:id="@+id/etEmail2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_item_large"
                android:hint="@string/email"
                android:lines="1"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/ic_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">
            <EditText
                android:id="@+id/etPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_item_large"
                android:hint="@string/password"
                android:lines="1"
                android:maxLength="10"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_phone2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <EditText
                android:id="@+id/etPhoneNumber2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_item_large"
                android:hint="@string/phone_number"
                android:lines="1"
                android:maxLength="12"
                android:inputType="phone"
                android:drawableEnd="@drawable/ic_phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSignUp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:onClick="onSignUpClick"
            android:text="@string/sign_up_button"
            android:background="@drawable/style_button_bg"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_item_small"
        android:gravity="center">
        <TextView
            android:id="@+id/tvDoYouHaveAccount2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:id="@+id/tvSingUp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSignInTVClick"
            android:text="@string/sign_in"
            android:layout_marginLeft="@dimen/margin_item_small"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold"/>
    </LinearLayout>


</LinearLayout>