<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding20">

    <TextView
        android:id="@+id/tvPriceOffer"
        style="@style/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_offer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPriceOfferDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_are_given_3_chance_to_negotiate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceOffer" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_price"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginTop="@dimen/margin20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceOfferDesc" >
        <EditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_item_large"
            android:hint="Input nego price"
            android:lines="1"
            android:maxLength="12"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnOk"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        android:text="@string/ok"
        app:layout_constraintStart_toStartOf="@+id/text_input_layout_price"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_price" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="@+id/text_input_layout_price"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_price" />
</androidx.constraintlayout.widget.ConstraintLayout>