<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/productCardView"
        android:layout_width="180dp"
        android:layout_height="210dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="@dimen/margin10"
        android:clickable="true"
        app:cardBackgroundColor="@color/rightCardColor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvProductTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding10"
                android:paddingTop="@dimen/padding10"
                android:text="@string/product_title"
                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/text18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvProductWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding10"
                android:text="@string/product_weight"
                android:textSize="@dimen/text12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProductTitle" />

            <TextView
                android:id="@+id/tvProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding10"
                android:text="@string/product_price"
                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/text12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProductWeight" />

            <ImageView
                android:id="@+id/ivProductImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/product_image"
                android:paddingLeft="@dimen/padding10"
                android:src="@drawable/img_broccoli"
                app:layout_constraintBottom_toBottomOf="@+id/btnProductCart"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/btnProductCart"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_cart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivProductImage"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>